--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ limitations under the License.
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     <link rel="stylesheet" href="main.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/thanhtv/manifest.json">
 </head>
 <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
