--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ limitations under the License.
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-    <link rel="stylesheet" href="/thanhtv/main.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="manifest" href="/thanhtv/manifest.json">
 </head>
 <body>
@@ -297,6 +297,6 @@ limitations under the License.
 
         resetUI();
     </script>
-
+    <script src="/thanhtv/firebase-messaging-sw.js"></script>
 </body>
 </html>
