--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ limitations under the License.
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/thanhtv/main.css">
     <link rel="manifest" href="/thanhtv/manifest.json">
 </head>
 <body>
@@ -78,7 +78,7 @@ limitations under the License.
     -->
     <!-- START INITIALIZATION CODE -->
 
-    <script src="https://www.gstatic.com/firebasejs/3.5.3/firebase.js"></script>
+     <!-- <script src="https://www.gstatic.com/firebasejs/3.5.3/firebase.js"></script>
     <script>
         // Initialize Firebase
         var config = {
@@ -89,7 +89,7 @@ limitations under the License.
             messagingSenderId: "1035166970659"
         };
         firebase.initializeApp(config);
-    </script>
+    </script> -->
     <!-- END INITIALIZATION CODE -->
     <!-- ******************************************************** -->
     <script>
