--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ limitations under the License.
     -->
     <!-- START INITIALIZATION CODE -->
 
-     <script src="https://www.gstatic.com/firebasejs/3.5.3/firebase-app.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/3.5.3/firebase.js"></script>
     <script>
         // Initialize Firebase
         var config = {
