--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ limitations under the License.
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     <link rel="stylesheet" href="main.css">
-    <link rel="manifest" href="/thanhtv/manifest.json">
 </head>
 <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -42,12 +41,11 @@ limitations under the License.
                 <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
                     <div class="mdl-card__supporting-text mdl-color-text--grey-600">
                         <!-- div to display the generated Instance ID token -->
-                        <div id="token_div" style="display: none;">
+                        <div id="token_div" style="">
                             <h4>Instance ID Token</h4>
                             <p id="token" style="word-break: break-all;"></p>
-                            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
-                                    onclick="deleteToken()">
-                                Delete Token
+                            <button id="btnPostNotify" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                                Send Message
                             </button>
                         </div>
                         <!-- div to display the UI to allow the request for permission to
@@ -68,234 +66,53 @@ limitations under the License.
             </div>
         </main>
     </div>
-    <!-- Firebase -->
-    <!-- ********************************************************
-         * TODO(DEVELOPER): Update Firebase initialization code:
-            1. Go to the Firebase console: https://console.firebase.google.com/
-            2. Choose a Firebase project you've created
-            3. Click "Add Firebase to your web app"
-            4. Replace the following initialization code with the code from the Firebase console:
-    -->
-    <!-- START INITIALIZATION CODE -->
-
-    <script src="https://www.gstatic.com/firebasejs/3.5.3/firebase.js"></script>
     <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyBfKJCK2MzmLH9CYqMMOnkOGHnfU1b8kEA",
-            authDomain: "my-notify-795c4.firebaseapp.com",
-            databaseURL: "https://my-notify-795c4.firebaseio.com",
-            storageBucket: "my-notify-795c4.appspot.com",
-            messagingSenderId: "1035166970659"
-        };
-        firebase.initializeApp(config);
-    </script>
-    <!-- END INITIALIZATION CODE -->
-    <!-- ******************************************************** -->
-    <script>
-        // [START get_messaging_object]
-        // Retrieve Firebase Messaging object.
-        const messaging = firebase.messaging();
-        // [END get_messaging_object]
-
-        // IDs of divs that display Instance ID token UI or request permission UI.
-        const tokenDivId = 'token_div';
-        const permissionDivId = 'permission_div';
-
-        // [START refresh_token]
-        // Callback fired if Instance ID token is updated.
-        messaging.onTokenRefresh(function () {
-            messaging.getToken()
-            .then(function (refreshedToken) {
-                console.log('Token refreshed.');
-                // Indicate that the new Instance ID token has not yet been sent to the
-                // app server.
-                setTokenSentToServer(false);
-                // Send Instance ID token to app server.
-                sendTokenToServer(refreshedToken);
-                // [START_EXCLUDE]
-                // Display new Instance ID token and clear UI of all previous messages.
-                resetUI();
-                // [END_EXCLUDE]
-            })
-            .catch(function (err) {
-                console.log('Unable to retrieve refreshed token ', err);
-                showToken('Unable to retrieve refreshed token ', err);
-            });
-        });
-        // [END refresh_token]
-
-        // [START receive_message]
-        // Handle incoming messages. Called when:
-        // - a message is received while the app has focus
-        // - the user clicks on an app notification created by a sevice worker
-        //   `messaging.setBackgroundMessageHandler` handler.
-        messaging.onMessage(function (payload) {
-            console.log("Message received. ", payload.notification);
-            // [START_EXCLUDE]
-            // Update the UI to include the received message.
-            var notification = new Notification('Websosanh', {
-                icon: 'http://websosanh.vn/Content/images/gray-logo.png',
-                body: "Bạn vừa chấp nhận nhận thông báo từ Websosanh, vawuf ddanwg kis !",
-            });
-
-            notification.onclick = function () {
-                window.open("http://websosanh.vn");
-            };
-            appendMessage(payload);
-            // [END_EXCLUDE]
-        });
-        // [END receive_message]
-
-        function resetUI() {
-            clearMessages();
-            showToken('loading...');
-            // [START get_token]
-            // Get Instance ID token. Initially this makes a network call, once retrieved
-            // subsequent calls to getToken will return from cache.
-            messaging.getToken()
-            .then(function (currentToken) {
-                if (currentToken) {
-                    sendTokenToServer(currentToken);
-                    updateUIForPushEnabled(currentToken);
-                } else {
-                    // Show permission request.
-                    console.log('No Instance ID token available. Request permission to generate one.');
-                    // Show permission UI.
-                    updateUIForPushPermissionRequired();
-                    setTokenSentToServer(false);
+           $('#btnPostNotify').on("click", function () {
+            var request = {
+                "to": "dwv_KIjBZ1Y:APA91bH-DBdKrDC6WqQA8yplyCsDHLTx1oDTjtgkEMwhHZkRn_ZQfKHLyQ6zr7NwtYvKPq4jhPiZfBw6Qp_HVKfQxNKwRGS4Kfd0BVZAcjdtMtjlf-O-S0lD3sN3uRaPycrsWqBgQ1w0",
+                "data": {
+                    "notification": {
+                        "title": "Websosanh Test Form",
+                        "body": "Feel and dance !",
+                        "icon": "/firebase-logo.png",
+                        "click_action": "https://www.youtube.com/watch?v=nHKLmsVnetY"
+                    }
                 }
-            })
-            .catch(function (err) {
-                console.log('An error occurred while retrieving token. ', err);
-                showToken('Error retrieving Instance ID token. ', err);
-                setTokenSentToServer(false);
+                //"notification": {
+                //    "title": "Websosanh Test Form",
+                //    "body": "Feel and dance !",
+                //    "icon": "/firebase-logo.png",
+                //    "click_action": "https://www.youtube.com/watch?v=nHKLmsVnetY"
+                //},
+                //"to": "dwv_KIjBZ1Y:APA91bH-DBdKrDC6WqQA8yplyCsDHLTx1oDTjtgkEMwhHZkRn_ZQfKHLyQ6zr7NwtYvKPq4jhPiZfBw6Qp_HVKfQxNKwRGS4Kfd0BVZAcjdtMtjlf-O-S0lD3sN3uRaPycrsWqBgQ1w0"
+            };
+
+            $.ajax({
+                url: 'https://fcm.googleapis.com/fcm/send',
+                headers: {
+                    'Authorization': 'key=AIzaSyBRu7f12ZSW0cbSFW_1gdAbAkHq9DUxdBQ',
+                    'Content-Type': 'application/json'
+                },
+                data: JSON.stringify({
+                    "to": "dwv_KIjBZ1Y:APA91bH-DBdKrDC6WqQA8yplyCsDHLTx1oDTjtgkEMwhHZkRn_ZQfKHLyQ6zr7NwtYvKPq4jhPiZfBw6Qp_HVKfQxNKwRGS4Kfd0BVZAcjdtMtjlf-O-S0lD3sN3uRaPycrsWqBgQ1w0",
+                    "data": {
+                        "notification": {
+                            "title": "Websosanh Test Form",
+                            "body": "Feel and dance !",
+                            "icon": "/firebase-logo.png",
+                            "click_action": "https://www.youtube.com/watch?v=nHKLmsVnetY"
+                        }
+                    }
+                }),
+                method: 'POST',
+                success: function (data, textStatus, jqXhr) {
+                    console.log('Sending IID Token to server: ', textStatus, jqXhr);
+                    if (jqXhr.status == 200) {
+                        console.log('Permission: ', textStatus);
+                    }
+                }
             });
-        }
-        // [END get_token]
-
-        function showToken(currentToken) {
-            // Show token in console and UI.
-            var tokenElement = document.querySelector('#token');
-            tokenElement.textContent = currentToken;
-        }
-
-        // Send the Instance ID token your application server, so that it can:
-        // - send messages back to this app
-        // - subscribe/unsubscribe the token from topics
-        function sendTokenToServer(currentToken) {
-            if (!isTokenSentToServer()) {
-                console.log('Sending token to server...');
-                // TODO(developer): Send the current token to your server.
-                setTokenSentToServer(true);
-            } else {
-                console.log('Token already sent to server so won\'t send it again ' +
-                    'unless it changes');
-            }
-
-        }
-
-        function isTokenSentToServer() {
-            if (window.localStorage.getItem('sentToServer') == 1) {
-                return true;
-            }
-            return false;
-        }
-
-        function setTokenSentToServer(sent) {
-            if (sent) {
-                window.localStorage.setItem('sentToServer', 1);
-            } else {
-                window.localStorage.setItem('sentToServer', 0);
-            }
-        }
-
-        function showHideDiv(divId, show) {
-            const div = document.querySelector('#' + divId);
-            if (show) {
-                div.style = "display: visible";
-            } else {
-                div.style = "display: none";
-            }
-        }
-
-        function requestPermission() {
-            console.log('Requesting permission...');
-            // [START request_permission]
-            messaging.requestPermission()
-            .then(function () {
-                console.log('Notification permission granted.');
-                // TODO(developer): Retrieve an Instance ID token for use with FCM.
-                // [START_EXCLUDE]
-                // In many cases once an app has been granted notification permission, it
-                // should update its UI reflecting this.
-                resetUI();
-                // [END_EXCLUDE]
-            })
-            .catch(function (err) {
-                console.log('Unable to get permission to notify.', err);
-            });
-            // [END request_permission]
-        }
-
-        function deleteToken() {
-            // Delete Instance ID token.
-            // [START delete_token]
-            messaging.getToken()
-            .then(function (currentToken) {
-                messaging.deleteToken(currentToken)
-                .then(function () {
-                    console.log('Token deleted.');
-                    setTokenSentToServer(false);
-                    // [START_EXCLUDE]
-                    // Once token is deleted update UI.
-                    resetUI();
-                    // [END_EXCLUDE]
-                })
-                .catch(function (err) {
-                    console.log('Unable to delete token. ', err);
-                });
-                // [END delete_token]
-            })
-            .catch(function (err) {
-                console.log('Error retrieving Instance ID token. ', err);
-                showToken('Error retrieving Instance ID token. ', err);
-            });
-
-        }
-
-        // Add a message to the messages element.
-        function appendMessage(payload) {
-            const messagesElement = document.querySelector('#messages');
-            const dataHeaderELement = document.createElement('h5');
-            const dataElement = document.createElement('pre');
-            dataElement.style = 'overflow-x:hidden;'
-            dataHeaderELement.textContent = 'Received message:';
-            dataElement.textContent = JSON.stringify(payload, null, 2);
-            messagesElement.appendChild(dataHeaderELement);
-            messagesElement.appendChild(dataElement);
-        }
-
-        // Clear the messages element of all children.
-        function clearMessages() {
-            const messagesElement = document.querySelector('#messages');
-            while (messagesElement.hasChildNodes()) {
-                messagesElement.removeChild(messagesElement.lastChild);
-            }
-        }
-
-        function updateUIForPushEnabled(currentToken) {
-            showHideDiv(tokenDivId, true);
-            showHideDiv(permissionDivId, false);
-            showToken(currentToken);
-        }
-
-        function updateUIForPushPermissionRequired() {
-            showHideDiv(tokenDivId, false);
-            showHideDiv(permissionDivId, true);
-        }
-
-        resetUI();
+        });
     </script>
 </body>
 </html>
