--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ limitations under the License.
                         <div id="token_div" style="">
                             <h4>Instance ID Token</h4>
                             <label>Tiêu đề</label>
-                                  <input type="text"  class="form-control title-mes">
+                                  <input type="text"  class="mdl-textfield__input title-mes">
                             <label>Nội dung</label>
-                                <input type="text"  class="form-control body-mes">
+                                <input type="text"  class="mdl-textfield__input body-mes">
                             <label>Link</label>
-                                <input type="text"  class="form-control link-mes">
+                                <input type="text"  class="mdl-textfield__input link-mes">
                             <label>Topic - Nhóm người dùng đăng ký nhận tin</label>
-                                <input type="text"  class="form-control topic-mes">
+                                <input type="text"  class="mdl-textfield__input topic-mes">
                             <span>ví dụ: <b>/topics/blackfriday</b> - Nhóm này được cung cấp bởi đội kỹ thuật</span>
                             <button id="btnPostNotify" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                                 Send Message
