--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ limitations under the License.
                                 <input type="text"  class="mdl-textfield__input link-mes">
                             <label>Topic - Nhóm người dùng đăng ký nhận tin</label>
                                 <input type="text"  class="mdl-textfield__input topic-mes">
-                            <span class="mdl-textfield__label">ví dụ: <b>/topics/blackfriday</b> - Nhóm này được cung cấp bởi đội kỹ thuật</span>
+                            <span class="mdl-switch__label">ví dụ: <b>/topics/blackfriday</b> - Nhóm này được cung cấp bởi đội kỹ thuật</span>
                             <button id="btnPostNotify" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                                 Send Message
                             </button>
