--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@ limitations under the License.
                     }
                 }
             };
+            
+            console.log(request);
 
             $.ajax({
                 url: 'https://fcm.googleapis.com/fcm/send',
