--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ limitations under the License.
                  var titleMessage = $('.title-mes').val();
         var bodyMessage = $('.body-mes').val();
         var linkAction = $('.link-mes').val();
-        var topicUser = $('.toppic-mes').val();
+        var topicUser = $('.topic-mes').val();
             var request = {
                 "to": topicUser,
                 "data": {
