--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ limitations under the License.
                             <label>Tiêu đề</label>
                                   <input type="text"  class="mdl-textfield__input title-mes">
                             <label>Nội dung</label>
-                                <input type="text"  class="mdl-textfield__input body-mes">
+                            <textarea type="text"  class="mdl-textfield__input body-mes"></textarea>
                             <label>Link</label>
                                 <input type="text"  class="mdl-textfield__input link-mes">
                             <label>Topic - Nhóm người dùng đăng ký nhận tin</label>
-                                <input type="text"  class="mdl-textfield__input topic-mes">
+                                <textarea type="text"  class="mdl-textfield__input topic-mes"></textarea>
                             <span class="mdl-switch__label">ví dụ: <b>/topics/blackfriday</b> - Nhóm này được cung cấp bởi đội kỹ thuật</span>
                             <button id="btnPostNotify" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                                 Send Message
