--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@ limitations under the License.
                 "to": topicUser,
                 "data": {
                     "notification": {
-                        "title": titleMessage,
-                        "body": bodyMessage,
-                        "icon": "/firebase-logo.png",
-                        "click_action": linkAction
+                        title: titleMessage,
+                       body: bodyMessage,
+                       icon: "/firebase-logo.png",
+                        click_action: linkAction
                     }
                 }
             };
