--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@ limitations under the License.
                 {
                     "to": topicUser,
                     "data": {
-                       "title": titleMessage,
+                            "notification_id": new Date(),
+                            "title": titleMessage,
                             "body": bodyMessage,
                             "icon": "/firebase-logo.png",
                             "click_action": linkAction
