--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ limitations under the License.
             
               var dts = Math.floor(Date.now());
             
-            console.log(request);
+            console.log(dts);
 
             $.ajax({
                 url: 'https://fcm.googleapis.com/fcm/send',
