--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ limitations under the License.
         var linkAction = $('.link-mes').val();
         var topicUser = $('.topic-mes').val();
             
-              var dts = Math.floor(new Date());
+              var dts = Math.floor(1483876800);
             
             console.log(dts);
 
